  + Published tarballs now contain a static executable (#11).
  + No longer using the deploy library to build releases (#15 #11).
  + Updated build script to more easily build static or dynamic executables
    (#11).
  + Fixed bug in computing the source-registry.d file for the clpm client (#16)
  + Starting to build up a test suite (#3)
  + Added automated testing on Gitlab CI.

  Fixes from the aborted 0.3.6:

  + Fix bug saving project metadata on Windows.
  + Fix client's UIOP dependency to better suit ECL's bundled fork of ASDF.
  + Fix issue READing strings in client from a lisp that is not SBCL (#13).
  + Parse inherited CL_SOURCE_REGISTRY config in client using ASDF (#14).


* v0.3.6 - 2021-01-11

  Note that this release never got published. There was a build and packaging
  issue. These fixes will be released in 0.4.0.

  + Fix bug saving project metadata on Windows.
  + Fix client's UIOP dependency to better suit ECL's bundled fork of ASDF.
  + Fix issue READing strings in client from a lisp that is not SBCL.
  + Parse inherited CL_SOURCE_REGISTRY config in client using ASDF.

* v0.3.5 - 2020-11-11

  + Fix bug in ordering releases for semantic versioned projects that include
    prereleases.

* v0.3.4 - 2020-07-08

  + Fix bug in parsing contexts referring to git commits when the git repo is
    not yet present on the filesystem.

* v0.3.3 - 2020-06-29

  + Fix bug in client that caused CLPM to stall when too much was printed to
    its stderr.

* v0.3.2 - 2020-06-08

  + Fix bug in client where =activate-context= did not ignore inherited source
    registries for bundles.
  + Sort more things serializing contexts. Should prevent excessive noise in
    bundle lock files.

* v0.3.1 - 2020-06-04

  + Fix bug in CLPI when interacting with dual-sources
  + Fix bug parsing :version dependency forms from ASDF.

* v0.3.0 - 2020-05-30

  + Pull HTTP client into separate library
    (=clpm-multi-http-client=). Additionally, this library supports connection